# gptgtk

./: Cargo.toml  flake.nix
src/: generator.rs  main.rs  main_window.rs
