[package]
name = "gptui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.17.9"
gtk = "0.17.1"
glib = "0.17.9"
gdk = "0.17.1"
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
serde_json = "1.0.95"
tokio = { version = "1.28.1", features = ["full"] }